--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Virtually Present!!</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />"
 </head>
 <body>
     <nav class="navbar">
@@ -99,6 +100,21 @@
         <input type="submit" value="SEND" id="send"> 
    </section>
 
+  <section id="footer">
+    <div class="footercontainer">
+     <div class="socialicons">
+        <a href="https://www.facebook.com/kodomoppoii/"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.instagram.com/_kodomoppoi"><i class="fab fa-instagram"></i></a>
+        <a href="https://twitter.com/_kodomoppoi"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.twitch.tv/kodomoppoi"><i class="fab fa-twitch"></i></a>
+        <a href="https://www.tiktok.com/@kodomoppoi_"><i class="fab fa-tiktok"></i></a>
+     </div>
+    </div>
+</section>
+
+<div class="bottom">
+    <p> kodomoppoi &copy;2023 <br> Designed by <span class="designer">Renée</span></p>
+    </div>
 
 </body>
 </html>
